skills stylization started

--- a/source/index.html
+++ b/source/index.html
@@ -39,7 +39,7 @@
         <header class="about__header">
           <div class="about__image-block">
             <picture>
-              <img class="img" src="img/iam.jpg" srcset="img/img/iam@2x.jpg 2x" width="92" height="92"
+              <img class="img" src="img/iam.jpg" srcset="img/iam@2x.jpg 2x" width="92" height="92"
                 alt="Розова Яна Сергеевна" />
             </picture>
           </div>
@@ -72,7 +72,7 @@
     <section class="skills">
       <div class="container">
         <a id="skills"></a>
-        <h3 class="title section-subtitle">Основные навыки</h3>
+        <h3 class="title section-subtitle skills__subtitle">Основные навыки</h3>
         <ul class="list technology skills__list">
           <li class="technology__item">
             <div class="technology__image-block">
@@ -260,7 +260,6 @@
                   title="Просмотреть опубликованный сайт">Открыть сайт</a>
               </div>
             </li>
-
           </ul>
         </div>
       </div>
