--- a/source/index.html
+++ b/source/index.html
@@ -69,92 +69,91 @@
         </section>
       </div>
     </article>
-    <section class="skills">
+    <section class="skills main__skills">
       <div class="container">
         <a id="skills"></a>
         <h3 class="title section-subtitle skills__subtitle">Основные навыки</h3>
-        <ul class="list technology skills__list">
-          <li class="technology__item">
-            <div class="technology__image-block">
+        <ul class="list skills__list">
+          <li class="skills__item">
+            <div class="skills__image-block">
               <svg class="icon skills__icon" width="20" height="23" role="img" aria-label="Бейдж HTML"
                 focusable="false">
                 <use xlink:href="img/sprite.svg#html-icon"></use>
               </svg>
             </div>
-            <p class="text technology__name">html</p>
+            <p class="text ">html</p>
           </li>
-          <li class="technology__item">
-            <div class="technology__image-block">
-              <svg class="icon technology__icon" width="20" height="23" role="img" aria-label="Бейдж CSS"
-                focusable="false">
+          <li class="skills__item">
+            <div class="skills__image-block">
+              <svg class="icon skills__icon" width="20" height="23" role="img" aria-label="Бейдж CSS" focusable="false">
                 <use xlink:href="img/sprite.svg#css-icon"></use>
               </svg>
             </div>
-            <p class="text technology__name">css</p>
+            <p class="text ">css</p>
           </li>
-          <li class="technology__item">
-            <div class="technology__image-block">
-              <svg class="icon technology__icon" width="20" height="23" role="img" aria-label="Бейдж JS"
-                focusable="false">
+          <li class="skills__item">
+            <div class="skills__image-block">
+              <svg class="icon skills__icon" width="20" height="23" role="img" aria-label="Бейдж JS" focusable="false">
                 <use xlink:href="img/sprite.svg#js-icon"></use>
               </svg>
             </div>
-            <p class="text technology__name">js</p>
+            <p class="text ">js</p>
           </li>
-          <li class="technology__item">
-            <div class="technology__image-block">
-              <svg class="icon technology__icon" width="29" height="22" role="img" aria-label="Бейдж SCSS"
+          <li class="skills__item">
+            <div class="skills__image-block">
+              <svg class="icon skills__icon" width="29" height="22" role="img" aria-label="Бейдж SCSS"
                 focusable="false">
                 <use xlink:href="img/sprite.svg#scss-icon"></use>
               </svg>
             </div>
-            <p class="text technology__name">scss</p>
+            <p class="text ">scss</p>
           </li>
         </ul>
-        <ul class="list app skills__list">
-          <li class="app__item">
-            <div class="app__image-block">
-              <svg class="icon app__icon" width="23" height="23" role="img" aria-label="Бейдж COREL DRAW"
+        <ul class="list skills__list">
+          <li class="skills__item">
+            <div class="skills__image-block">
+              <svg class="icon skills__icon" width="23" height="23" role="img" aria-label="Бейдж COREL DRAW"
                 focusable="false">
                 <use xlink:href="img/sprite.svg#corel-icon"></use>
               </svg>
             </div>
-            <p class="text app__name">corel draw</p>
+            <p class="text ">corel draw</p>
           </li>
-          <li class="app__item">
-            <div class="app__image-block">
-              <svg class="icon app__icon" width="15" height="23" role="img" aria-label="Бейдж FIGMA" focusable="false">
+          <li class="skills__item">
+            <div class="skills__image-block">
+              <svg class="icon skills__icon" width="15" height="23" role="img" aria-label="Бейдж FIGMA"
+                focusable="false">
                 <use xlink:href="img/sprite.svg#figma-icon"></use>
               </svg>
             </div>
-            <p class="text app__name">figma</p>
+            <p class="text ">figma</p>
           </li>
-          <li class="app__item">
-            <div class="app__image-block">
-              <svg class="icon app__icon" width="23" height="23" role="img" aria-label="Бейдж PHOTOSHOP"
+          <li class="skills__item">
+            <div class="skills__image-block">
+              <svg class="icon skills__icon" width="23" height="23" role="img" aria-label="Бейдж PHOTOSHOP"
                 focusable="false">
                 <use xlink:href="img/sprite.svg#ps-icon"></use>
               </svg>
             </div>
-            <p class="text technology__name">photoshop</p>
+            <p class="text ">photoshop</p>
           </li>
         </ul>
-        <p class="text  skills__text">
+        <p class="text skills__text">
           Разработка сайтов в&nbsp;VS Code (HTML, CSS, SCSS, JS), адаптивная, семантичная вёрстка по БЭМ, использование
           svg-графики.
         </p>
-        <p class="text  skills__text">
+        <p class="text skills__text">
           Работа в&nbsp;Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание
           векторных изображений, макетирование), Adobe InDesign, Adobe Illustrator.
         </p>
-        <p class="text  skills__text">
+        <p class="text skills__text">
           Знание программ пакета Office. Работа с&nbsp;офисной техникой (распечатка, сканирование, настройка). Работа
           на&nbsp;оборудовании интерьерной и&nbsp;полиграфической печати.
         </p>
-        <p class="text  skills__text">
+        <p class="text skills__text">
           <em>Уровень владения компьютером: </em> продвинутый пользователь.
         </p>
-        <p class="text  skills__text">
+        <p class="text skills__text">
           <em>Уровень владения английским:</em> pre-intermediate.
         </p>
       </div>
@@ -165,34 +164,35 @@
         <h2 class="visually-hidden">Портфолио</h2>
         <h3 class="title section-subtitle">Примеры работ</h3>
         <div class="slider">
-          <div class="slider-controls">
-            <div class="slider-buttons slider__buttons">
-              <button class="button slider-button slider-button--prew" type="button">
-                <svg class="icon app__icon" width="23" height="41" role="img"
-                  aria-label="Кнопка: перейти на предыдущий слайд" focusable="false">
-                  <use xlink:href="img/sprite.svg#arrow-prew"></use>
-                </svg>
-                <span class="visually-hidden">Перейти на предыдущий слайд</span>
-              </button>
-              <button class="button slider-button slider-button--next" type="button">
-                <svg class="icon app__icon" width="23" height="41" role="img"
-                  aria-label="Кнопка: перейти на следующий слайд" focusable="false">
-                  <use xlink:href="img/sprite.svg#arrow-next"></use>
-                </svg>
-                <span class="visually-hidden">Перейти на следующий слайд</span>
-              </button>
-            </div>
-            <div class="slider-bullets">
-              <label class="slider-bullets__label slider-bullets__label--current" id="first-slide">
-                <input class="visually-hidden" type="radio" name="bullet" checked>
-              </label>
-              <label class="slider-bullets__label" id="second-slide">
-                <input class="visually-hidden" type="radio" name="bullet">
-              </label>
-              <label class="slider-bullets__label" id="third-slide">
-                <input class="visually-hidden" type="radio" name="bullet">
-              </label>
-            </div>
+          <div class="slider-buttons slider__buttons">
+            <button class="button slider-button slider-button--prew" type="button">
+              <svg class="icon skills__icon" width="23" height="41" role="img"
+                aria-label="Кнопка: перейти на предыдущий слайд" focusable="false">
+                <use xlink:href="img/sprite.svg#arrow-prew"></use>
+              </svg>
+              <span class="visually-hidden">Перейти на предыдущий слайд</span>
+            </button>
+            <button class="button slider-button slider-button--next" type="button">
+              <svg class="icon skills__icon" width="23" height="41" role="img"
+                aria-label="Кнопка: перейти на следующий слайд" focusable="false">
+                <use xlink:href="img/sprite.svg#arrow-next"></use>
+              </svg>
+              <span class="visually-hidden">Перейти на следующий слайд</span>
+            </button>
+          </div>
+          <div class="slider__bullet-block">
+            <input class="slider__bullet visually-hidden" id="first-slide" type="radio" name="bullet" checked>
+            <label class="slider__label" for="first-slide">
+              <span class="visually-hidden">Первый слайд</span>
+            </label>
+            <input class="slider__bullet visually-hidden" id="second-slide" type="radio" name="bullet">
+            <label class="slider__label" for="second-slide">
+              <span class="visually-hidden">Второй слайд</span>
+            </label>
+            <input class="slider__bullet visually-hidden" id="third-slide" type="radio" name="bullet">
+            <label class="slider__label" for="third-slide">
+              <span class="visually-hidden">Третий слайд</span>
+            </label>
           </div>
           <ul class="list slider__list">
             <li class="slider__item">
@@ -203,7 +203,7 @@
                     alt="Демонстрация сайта Cat Energy" />
                 </picture>
               </div>
-              <div class="slide__text-block">
+              <div class="slider__text-block">
                 <h4 class="title subtitle">Сайт для интернет-магазина <span class="project-name">&laquo;Cat
                     energy&raquo;</span>
                 </h4>
