--- a/source/index.html
+++ b/source/index.html
@@ -9,10 +9,6 @@
   <meta name="description" content="Портфолио Розова ЯС">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="css/style.css" rel="stylesheet" type="text/css" />
-  <link
-  rel="stylesheet"
-  href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
-/>
   <link rel="preload" href="fonts/Jost-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/Jost-Regular.woff" as="font" type="font/woff" crossorigin="anonymous">
   <link rel="preload" href="fonts/Jost-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -203,7 +199,7 @@
                     alt="Демонстрация сайта Техномарт" />
                 </picture>
               </div>
-              <div class="slide__text-block">
+              <div class="slider__text-block">
                 <h4 class="title subtitle">Сайт для интернет-магазина <span
                     class="project-name">&laquo;Техномарт&raquo;</span> </h4>
                 <p class="text  slider__text">
@@ -267,7 +263,7 @@
   </footer>
   <script src="js/burger.js"></script>
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-  <script type="text/javascript" src="js/slider-settings.js"></script>
+  <script src="js/slider-settings.js"></script>
 </body>
 
 </html>
