--- a/source/index.html
+++ b/source/index.html
@@ -143,6 +143,10 @@
             <li class="slider__item swiper-slide">
               <div class="slider__image-block">
                 <picture>
+                  <source type="image/webp" media="(min-width:768px)"
+                    srcset="@img/portfolio/site-pre-cat-tablet.webp 1x, img/portfolio/site-pre-cat-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="@img/portfolio/site-pre-cat.webp 1x, img/portfolio/site-pre-cat@2x.webp 2x">
                   <source media="(min-width:768px)"
                     srcset="@img/portfolio/site-pre-cat-tablet.png 1x, img/portfolio/site-pre-cat-tablet@2x.png 2x">
                   <img class="@img slider__img" src="img/portfolio/site-pre-cat.png"
@@ -167,6 +171,10 @@
             <li class="slider__item swiper-slide">
               <div class="slider__image-block">
                 <picture>
+                  <source type="image/webp" media="(min-width:768px)"
+                    srcset="@img/portfolio/site-pre-technomart-tablet.webp 1x, img/portfolio/site-pre-technomart-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="@img/portfolio/site-pre-technomart.webp 1x, img/portfolio/site-pre-technomart@2x.webp 2x">
                   <source media="(min-width:768px)"
                     srcset="@img/portfolio/site-pre-technomart-tablet.png 1x, img/portfolio/site-pre-technomart-tablet@2x.png 2x">
                   <img class="@img slider__img" src="img/portfolio/site-pre-technomart.png"
@@ -193,6 +201,10 @@
             <li class="slider__item swiper-slide">
               <div class="slider__image-block">
                 <picture>
+                  <source type="image/webp" media="(min-width:768px)"
+                    srcset="@img/portfolio/site-pre-playtennis-tablet.webp 1x, img/portfolio/site-pre-playtennis-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="@img/portfolio/site-pre-playtennis.webp 1x, img/portfolio/site-pre-playtennis@2x.webp 2x">
                   <source media="(min-width:768px)"
                     srcset="@img/portfolio/site-pre-playtennis-tablet.png 1x, img/portfolio/site-pre-playtennis-tablet@2x.png 2x">
                   <img class="@img slider__img" src="img/portfolio/site-pre-playtennis.png"
