--- a/source/index.html
+++ b/source/index.html
@@ -138,9 +138,9 @@
         <a id="portfolio"></a>
         <h2 class="visually-hidden">Портфолио</h2>
         <h3 class="title section-subtitle">Примеры работ</h3>
-        <div class="slider swiper">
-          <ul class="list slider__content swiper-wrapper portfolio__slider">
-            <li class="slider__item swiper-slide">
+        <div class="slider-image swiper">
+          <ul class="list slider slider-image__wrapper swiper-wrapper">
+            <li class="slider-image swiper-slide">
               <div class="slider__image-block">
                 <picture>
                   <source type="image/webp" media="(min-width:768px)"
@@ -154,21 +154,8 @@
                     alt="Демонстрация сайта Cat Energy" />
                 </picture>
               </div>
-              <div class="slider__text-block">
-                <h4 class="title subtitle">Сайт для интернет-магазина <span class="project-name">&laquo;Cat
-                    energy&raquo;</span>
-                </h4>
-                <p class="text  slider__text">
-                  Реализован в&nbsp;процессе обучения на&nbsp;курсе адаптивной вёрстки и автоматизации в&nbsp;<a
-                    href="https://htmlacademy.ru/" class="text-link" title="Сайт HTML Academy">HTML&nbsp;Academy</a>
-                </p>
-                <p class="text  slider__text">Адаптивен для разных устройств, адаптивная и оптимизированная
-                  графика. Использованы Flex, Grid, препроцессор SCSS, сборщик Gulp. Имеет меню-бургер, слайдер. </p>
-                <a class="button button button-preview" target="_blank" href="https://chiprose.github.io/Cat-energy/"
-                  title="Просмотреть опубликованный сайт">Открыть сайт</a>
-              </div>
             </li>
-            <li class="slider__item swiper-slide">
+            <li class="slider-image__item swiper-slide">
               <div class="slider__image-block">
                 <picture>
                   <source type="image/webp" media="(min-width:768px)"
@@ -182,23 +169,8 @@
                     alt="Демонстрация сайта Техномарт" />
                 </picture>
               </div>
-              <div class="slider__text-block">
-                <h4 class="title subtitle">Сайт для интернет-магазина <span
-                    class="project-name">&laquo;Техномарт&raquo;</span> </h4>
-                <p class="text  slider__text">
-                  Реализован в&nbsp;процессе обучения на&nbsp;курсе профессиональной вёрстки в&nbsp;<a
-                    href="https://htmlacademy.ru/" class="text-link" title="Сайт HTML Academy">HTML&nbsp;Academy</a>
-                </p>
-                <p class="text  slider__text">
-                  Использованы Grid, Flex. Проходит проверку переполнения контентом. Имеет модальные окна, слайдеры,
-                  работающие на&nbsp;JS&nbsp;и&nbsp;CSS. Реализована доступность
-                  для&nbsp;скринридеров.
-                </p>
-                <a class="button button-preview" target="_blank" href="https://chiprose.github.io/Technomart/"
-                  title="Просмотреть опубликованный сайт">Открыть сайт</a>
-              </div>
             </li>
-            <li class="slider__item swiper-slide">
+            <li class="slider-image__item swiper-slide">
               <div class="slider__image-block">
                 <picture>
                   <source type="image/webp" media="(min-width:768px)"
@@ -212,23 +184,57 @@
                     alt="Демонстрация сайта Play ТЕННИС" />
                 </picture>
               </div>
-              <div class="slide__text-block">
-                <h4 class="title subtitle">Сайт для теннисного клуба <span class="project-name">&laquo;Play
-                    ТЕННИС&raquo;</span> </h4>
-                <p class="text  slider__text">Реализован по собственному проекту.</p>
-                <p class="text  slider__text">Адаптивен для разных устройств. Использованы Flex. Имеет
-                  меню-бургер, слайдер с
-                  фотогалереей, спойлеры, табы.</p>
-                <a class="button button button-preview" target="_blank" href="https://chiprose.github.io/PlayTennis/"
-                  title="Просмотреть опубликованный сайт">Открыть сайт</a>
-              </div>
             </li>
           </ul>
-          <button class="button slider__button slider__button--prev" type="button"></button>
-          <button class="button slider__button slider__button--next" type="button"></button>
-          <ul class="slider__bullets">
+        </div>
+        <ul class="slider__bullets swiper-pagination">
+        </ul>
+        <div class="slider-description swiper">
+          <ul class="list slider slider-description__wrapper swiper-wrapper">
+            <li class="slider-description__item swiper-slide">
+              <h4 class="title subtitle">Сайт для интернет-магазина <span class="project-name">&laquo;Cat
+                  energy&raquo;</span>
+              </h4>
+              <p class="text slider__text">
+                Реализован в&nbsp;процессе обучения на&nbsp;курсе адаптивной вёрстки и автоматизации в&nbsp;<a
+                  href="https://htmlacademy.ru/" class="text-link" title="Сайт HTML Academy">HTML&nbsp;Academy</a>
+              </p>
+              <p class="text slider__text">Адаптивен для разных устройств, адаптивная и оптимизированная
+                графика. Использованы Flex, Grid, препроцессор SCSS, сборщик Gulp. Имеет меню-бургер, слайдер. </p>
+              <a class="button button button-preview" target="_blank" href="https://chiprose.github.io/Cat-energy/"
+                title="Просмотреть опубликованный сайт">Открыть сайт</a>
+            </li>
+            <li class="slider-description__item swiper-slide">
+              <h4 class="title subtitle">Сайт для интернет-магазина <span
+                  class="project-name">&laquo;Техномарт&raquo;</span> </h4>
+              <p class="text  slider__text">
+                Реализован в&nbsp;процессе обучения на&nbsp;курсе профессиональной вёрстки в&nbsp;<a
+                  href="https://htmlacademy.ru/" class="text-link" title="Сайт HTML Academy">HTML&nbsp;Academy</a>
+              </p>
+              <p class="text slider__text">
+                Использованы Grid, Flex. Проходит проверку переполнения контентом. Имеет модальные окна, слайдеры,
+                работающие на&nbsp;JS&nbsp;и&nbsp;CSS. Реализована доступность
+                для&nbsp;скринридеров.
+              </p>
+              <a class="button button-preview" target="_blank" href="https://chiprose.github.io/Technomart/"
+                title="Просмотреть опубликованный сайт">Открыть сайт</a>
+            </li>
+            <li class="slider-description__item swiper-slide">
+              <h4 class="title subtitle">Сайт для теннисного клуба <span class="project-name">&laquo;Play
+                  ТЕННИС&raquo;</span> </h4>
+              <p class="text  slider__text">Реализован по собственному проекту.</p>
+              <p class="text  slider__text">Адаптивен для разных устройств. Использованы Flex. Имеет
+                меню-бургер, слайдер с
+                фотогалереей, спойлеры, табы.</p>
+              <a class="button button button-preview" target="_blank" href="https://chiprose.github.io/PlayTennis/"
+                title="Просмотреть опубликованный сайт">Открыть сайт</a>
+            </li>
           </ul>
         </div>
+        <button class="button slider__button slider__button--prev" type="button"></button>
+        <button class="button slider__button slider__button--next" type="button"></button>
+
+      </div>
       </div>
     </article>
   </main>
