--- a/source/index.html
+++ b/source/index.html
@@ -138,8 +138,8 @@
         <a id="portfolio"></a>
         <h2 class="visually-hidden">Портфолио</h2>
         <h3 class="title section-subtitle">Примеры работ</h3>
-        <div class="slider-image swiper">
-          <ul class="list slider slider-image__wrapper swiper-wrapper">
+        <div class="slider swiper slider-image">
+          <ul class="list slider-image__wrapper swiper-wrapper">
             <li class="slider-image swiper-slide">
               <div class="slider__image-block">
                 <picture>
@@ -189,8 +189,8 @@
         </div>
         <ul class="slider__bullets swiper-pagination">
         </ul>
-        <div class="slider-description swiper">
-          <ul class="list slider slider-description__wrapper swiper-wrapper">
+        <div class="slider swiper slider-description">
+          <ul class="list slider-description__wrapper swiper-wrapper">
             <li class="slider-description__item swiper-slide">
               <h4 class="title subtitle">Сайт для интернет-магазина <span class="project-name">&laquo;Cat
                   energy&raquo;</span>
@@ -230,11 +230,11 @@
                 title="Просмотреть опубликованный сайт">Открыть сайт</a>
             </li>
           </ul>
+          <button class="button slider__button slider__button--prev" type="button"></button>
+          <button class="button slider__button slider__button--next" type="button"></button>
         </div>
-        <button class="button slider__button slider__button--prev" type="button"></button>
-        <button class="button slider__button slider__button--next" type="button"></button>
 
-      </div>
+
       </div>
     </article>
   </main>
