Style for mobile version

--- a/source/html/footer.html
+++ b/source/html/footer.html
@@ -1,16 +1,19 @@
-<footer class="page__footer">
-  <div class="container">
+<footer class="footer page__footer">
+  <div class="container footer__container">
     <a class="link footer__link" href="https://github.com/ChipRose" title="Посмотреть работы на GitHub">
-      <svg class="icon footer__icon" width="20" height="20" role="img" aria-label="Иконка Github" focusable="false">
-        <use xlink:href="img/sprite.svg#github-icon"></use>
+      <svg class="footer__icon" width="21" height="21" role="img" aria-label="Иконка Github" focusable="false">
+        <use xlink:href="@img/sprite.svg#github-icon"></use>
       </svg>
       GitHub
     </a>
     <a class="link footer__link" href="tel:+79604608234" title="Позвонить Frontend-разработчику">
-      <svg class="icon footer__icon" width="20" height="20" role="img" aria-label="Иконка Github" focusable="false">
-        <use xlink:href="img/sprite.svg#phone-icon"></use>
+      <svg class="footer__icon" width="21" height="21" role="img" aria-label="Иконка Github" focusable="false">
+        <use xlink:href="@img/sprite.svg#phone-icon"></use>
       </svg>
       +7 960 460 8 234
     </a>
+    <p class="text">
+      ©Yana Rozova
+    </p>
   </div>
 </footer>
