--- a/source/html/head.html
+++ b/source/html/head.html
@@ -1,7 +1,8 @@
 <head>
   <meta charset="utf-8" />
   <title>@@title</title>
-  <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml" />
+  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="icon" href="@img/favicon/" type="image/svg+xml" />
   <link rel="icon" href="favicon.ico" />
   <meta name="description" content="Портфолио Розова ЯС">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
