Adaptive font size for tablet version

--- a/source/index.html
+++ b/source/index.html
@@ -201,7 +201,7 @@
                     </a>
                   </p>
                   <p class="text slider__text">Адаптивен для разных устройств, адаптивная и оптимизированная
-                    графика. Использованы Flex, Grid, препроцессор SCSS, сборщик Gulp. Имеет меню-бургер, слайдер.
+                    графика, svg, спрайт. Использованы Flex, Grid, препроцессор SCSS, сборщик Gulp. Имеет меню-бургер, слайдер.
                   </p>
                 </div>
                 <a class="link button-preview slider__button" target="_blank"
