--- a/source/html/header.html
+++ b/source/html/header.html
@@ -1,4 +1,4 @@
-<header class="header header--nojs page__header">
+<header class="header page__header">
   <div class="header__container">
     <h1 class="title main-title header__title">Резюме</h1>
     <div class="header__back"></div>
