--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html class="page page--nojs" lang="ru">
 
 @@include('html/head.html',{
 'title':'Портфолио фронтенд-разработчика'
