page setting when burger open

--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
 'title':'Портфолио фронтенд-разработчика'
 })
 
-<body class="page__body">
+<body class="body page__body">
   @@include('html/header.html',{})
   <main class="main page__main">
     <section class="about main__about">
