--- a/source/index.html
+++ b/source/index.html
@@ -229,14 +229,11 @@
     <li class="swiper-slide slider__description-item">
       <h4 class="title subtitle">Сайт для сервиса</h4>
       <div class="slider__text-block">
-        <p class="text slider__text">
+        <p class="text slider__text slider__text-anotation">
           Реализован в&nbsp;процессе обучения на&nbsp;курсе <br>&laquo;JavaScript. Профессиональная разработка
           веб-интерфейсов&raquo; <br> в&nbsp;
-          <a class="link text-link" href="https://htmlacademy.ru/" title="Сайт HTML Academy">
-            HTML&nbsp;Academy
-          </a> (без наставника).
         </p>
-        <p class="text slider__text">
+        <p class="text slider__text slider__text-description">
           Реализованы возможности получения и отправки данных объявлений с сервера, так же предусмотрено состояние, если
           возникли ошибки работы с сервером.
           Полученные данные отрисовываются в балунах к меткам карты, имеется возможность фильтрации объявлений по
