--- a/source/index.html
+++ b/source/index.html
@@ -227,19 +227,13 @@
   <!-- Slide text block template -->
   <template id="slide-text">
     <li class="swiper-slide slider__description-item">
-      <h4 class="title subtitle">Сайт для сервиса</h4>
+      <h4 class="title subtitle">Заголовок</h4>
       <div class="slider__text-block">
         <p class="text slider__text slider__text-anotation">
-          Реализован в&nbsp;процессе обучения на&nbsp;курсе <br>&laquo;JavaScript. Профессиональная разработка
-          веб-интерфейсов&raquo; <br> в&nbsp;
+          Анотация
         </p>
         <p class="text slider__text slider__text-description">
-          Реализованы возможности получения и отправки данных объявлений с сервера, так же предусмотрено состояние, если
-          возникли ошибки работы с сервером.
-          Полученные данные отрисовываются в балунах к меткам карты, имеется возможность фильтрации объявлений по
-          заданным параметрам.
-          Осуществляется валидация формы.
-          Использованы библиотеки leaflet, lodash. Сборка проекта реализована с помощью webpack.
+          Описание
         </p>
       </div>
       <a class="link button-preview slider__button" target="_blank" href="https://chiprose.github.io/Keksobooking/"
