--- a/source/index.html
+++ b/source/index.html
@@ -218,7 +218,7 @@
           srcset="img/portfolio/site-pre-keksobooking.webp 1x, img/portfolio/site-pre-keksobooking@2x.webp 2x">
         <source media="(min-width:768px)" id="image-png-tablet"
           srcset="img/portfolio/site-pre-keksobooking-tablet.png 1x, img/portfolio/site-pre-keksobooking-tablet@2x.png 2x"> 
-        <img class="img slider__img" src="img/portfolio/site-pre-keksobooking.png"
+        <img class="slider__img" src="img/portfolio/site-pre-keksobooking.png"
           srcset="img/portfolio/site-pre-keksobooking@2x.png 2x" width="280" height="186"
           alt="Демонстрация сайта Kekesobooking" />
       </picture>
